# crusty

./: .gitignore  README.md  package-lock.json
backend/: .env.example  Cargo.toml  init_db.ps1.example  run.ps1.example
backend/src/: main.rs
backend/src/models/: auth.rs  media.rs  mod.rs  user.rs
backend/src/routes/: auth.rs  media.rs  mod.rs
backend/src/services/: auth_service.rs  media_service.rs  mod.rs
backend/src/utils/: auth_middleware.rs  encryption.rs  mod.rs
database/: check_media.ps1  check_users.ps1  run_sql.ps1  verify_db.sql
database/migrations/: 001_create_users.sql  002_create_media.sql
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  App.tsx  main.jsx  theme.ts
frontend/src/api/: client.ts
frontend/src/components/Auth/: LoginForm.tsx  RegisterForm.tsx
frontend/src/components/Dashboard/: Dashboard.tsx
frontend/src/components/Media/: MediaGrid.tsx  MediaUpload.tsx
frontend/src/contexts/: AuthContext.tsx
